update api: add put and delete
